Created database querying functions

--- a/Final Project References/templates/CatCoin_Stock.html
+++ b/Final Project References/templates/CatCoin_Stock.html
@@ -6,8 +6,8 @@
     <title>CatCoin Stock Ticker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/style.css?foo=30969" type="text/css"/>
-    <link rel="shortcut icon" type="image/jpg" href="/static/favicon.ico"/>
+    <link rel="stylesheet" href="/style.css?foo=30969" type="text/css"/>
+    <link rel="shortcut icon" type="image/jpg" href="/Final%20Project%20References/instance/static/favicon.ico"/>
     <!-- The next four lines were updated-->
     <script src="https://jreddy1.w3.uvm.edu/getStock.js"
             integrity="sha256-75jche47CmmQ8L7hLjHEB/vztKWWOAjwx1iJOUpEebk="
@@ -18,7 +18,7 @@
 <body onload="loadStockData()">
 <div id="visible-content">
     <div id="masthead">
-        <a href="/"><img src="/static/catamount.png" alt="Catamount"/></a>
+        <a href="/"><img src="/catamount.png" alt="Catamount"/></a>
         <h1>Catamount Community Bank</h1>
     </div>
 
@@ -29,7 +29,7 @@
             <h4>Current Price: <span id="currentValue" style="color: #f50104;"></span></h4>
         </div>
         <div class="col md-12">
-            <img src="/static/stock_market.png">
+            <img src="/stock_market.png">
         </div>
     </div>
 
