--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,25 +9,8 @@
 </head>
 <body>
 <div id="masthead">
-    <a href="/"><img src="/static/catamount.png?bust=1" alt="Catamount"/></a><h1>Catamount Community Bank</h1>
+    <a href="/"><img src="/static/catamount.png?bust=1" alt="Catamount"/></a>
 </div>
-{% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <div> {# class="container" #}
-            {% for category, message in messages %}
-                <div class="alert {{ category }} alert-dismissible"
-                     role="alert">
-                    <button type="button" class="close" data-dismiss="alert"
-                            aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    {{ message }}
-                </div>
-            {% endfor %}
-        </div>
-    {% endif %}
-{% endwith %}
-
 <div id="content">
     <h2>{{ heading }}</h2>
     {% block content %}{% endblock %}
@@ -35,11 +18,6 @@
 
 <footer>
     <strong>University of Vermont</strong><br />CS166 - Cybersecurity Principles
-
 </footer>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
