--- a/static/style.css
+++ b/static/style.css
@@ -1,45 +1,91 @@
-#masthead {
-    background-color: #66AC47;
-    padding: 20px;
-    border-bottom: #485f6e 1px solid;
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Share Tech", sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-size: cover;
+    background: url(wave.jpg) no-repeat center;
+}
+
+.wrapper {
+    width: 420px;
+    background: transparent;
+    color: #ffff;
+    border-radius: 10px;
+    padding: 30px 40px;
+}
+
+.wrapper h1 {
+    font-size: 36px;
+    text-align: center;
+}
+
+.wrapper .input-box {
+    position: relative;
     width: 100%;
+    height: 50px;
+    background: transparent;
+    margin: 30px 0;
 }
 
-#masthead img {
-    margin-right: 1em;
-}
-
-#masthead h1 {
-    font-family: serif;
-    display: inline-block;
-    color: white;
-}
-
-.tagline {
-    display: inline-block;
-    margin-top: 1em;
-    font-style: italic;
-}
-
-footer {
-    margin-top: 4em;
-    padding: 2em 20px 8em;
+.input-box input{
     width: 100%;
-    background-color: #007155;
-    color: #eee;
-    font-family: serif;
-
+    height: 100%;
+    background: transparent;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px
 }
 
-#content{
-    padding: 1.5em 3em;
+.input-box input::placeholder {
+    color: #fff;
 }
 
-.uvm-green {
-    background-color: #007155;
-    color: white;
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-#lesson-choices {
-    margin-bottom: 15rem;
+.wrapper .btn {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+
+.wrapper .register-link {
+    font-size: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.register-link p a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.register-link p a:hover{
+    text-decoration: underline;
 }
