Started work on redirecting user to different page

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <button type="Submit" class="btn">Login</button>
                 <div class="register-link">
-                    <p>Don't have an account? <a href="#">Register</a></p>
+                    <p>Don't have an account? <a href="/intranet_menu">Register</a></p>
                 </div>
             </form>
         </div>
