--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,8 @@ body {
     width: 420px;
     background: transparent;
     color: #ffff;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 30px 40px;
 }
