--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,9 @@
                 </div>
                 <button type="Submit" class="btn">Login</button>
                 <div class="register-link">
-                    <p>Don't have an account? <a href="/intranet_menu">Register</a></p>
+                    <p>Don't have an account? <a href="#">Register</a></p>
                 </div>
             </form>
         </div>
     </body>
 </html>
-
