started work on intranet menu

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <form action="">
+            <form action="/intranet_menu">
                 <h1>Company Intranet Login</h1>
                 <div class="input-box">
                     <input type="text" placeholder="Username" required>
