--- a/templates/intranet_menu.html
+++ b/templates/intranet_menu.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Intranet_Menu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/style.css">
+    <title>Intranet Menu</title>
 </head>
 <body>
-
+    <div class="wrapper">
+        <h1  class="accepted_title">Welcome!</h1>
+        <ul>
+            <li><a href="/accepted_choice">Time Reporting</a></li>
+            <li><a href="/accepted_choice">Accounting</a></li>
+            <li><a href="/accepted_choice">Product Performance</a></li>
+            <li><a href="/accepted_choice">Projects</a></li>
+            <li><a href="/accepted_choice">Employee Management</a></li>
+            <li><a href="/accepted_choice">Exit</a></li>
+        </ul>
+    </div>
 </body>
 </html>
