--- a/static/style.css
+++ b/static/style.css
@@ -76,6 +76,20 @@ body {
     font-weight: 600;
 }
 
+.wrapper .menu-btn {
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 7px;
+}
+
 .wrapper .register-link {
     font-size: 14.5px;
     text-align: center;
