--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
-
+/* TODO: Doc this */
 * {
     margin: 0;
     padding: 0;
