--- a/templates/intranet_menu.html
+++ b/templates/intranet_menu.html
@@ -1,6 +1,6 @@
 <!--TODO: Doc this-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
