--- a/static/style.css
+++ b/static/style.css
@@ -87,7 +87,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     color: #333;
-    margin-bottom: 7px;
+    margin-top: 7px;
     font-weight: 600;
 }
 
@@ -97,9 +97,18 @@ body {
     margin: 20px 0 15px;
 }
 
-.wrapper .error {
+.wrapper .error p {
     text-align: center;
     color: red;
+}
+
+.wrapper .error ul li {
+    color: red;
+}
+
+.wrapper .success p {
+    text-align: center;
+    color: green;
 }
 
 .wrapper .strong-pass {
@@ -125,11 +134,16 @@ body {
     font-weight: 600;
 }
 
-.register-link p a:hover{
+.register-link p a:hover {
     text-decoration: underline;
 }
 
-.password-generator p a:hover{
+.password-generator p a:hover {
     text-decoration: underline;
+}
+
+.wrapper .too-many-attempts {
+    color: red;
+    text-align: center;
 }
 
