Added some more comments. Trying to figure out attempts bug (user can hit register and go back to login in to get more attempts).

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                     </div>
                     {% endif %}
                     <div class="register-link">
-                        <p>Don't have an account? <a href="/register">Register</a></p>
+                        <p>Don't have an account? <a href="/register?attempts={{ attempts }}">Register</a></p>
                     </div>
                     <div class="password-generator">
                         <p>Create strong password? <a href="/?create_pass=True">Create</a></p>
