--- a/templates/intranet_menu.html
+++ b/templates/intranet_menu.html
@@ -8,6 +8,10 @@
         <title>Intranet Menu</title>
     </head>
     <body>
+        <!-- Displays the correct set of buttons based on access type
+        NONE: Time Reporting and Exit
+        LIMITED: NONE options, Accounting, and Projects
+        ADMIN: LIMITED options, Product Performance, and Employee Management -->
         <div class="wrapper">
             <h1  class="accepted_title">Welcome!</h1>
             <button type="button" class="menu-btn" onclick="window.location.href = '/accepted_choice'">Time Reporting</button>
