--- a/templates/accepted_choice.html
+++ b/templates/accepted_choice.html
@@ -1,5 +1,4 @@
-<!--TODO: Doc this-->
-<!--TODO: Finish this-->
+<!--Simply Displays a WELCOME message if the user clicks on a menu option-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +8,6 @@
     <title>Accepted Choice</title>
 </head>
 <body>
-    <h1> CHOICE ACCEPTED </h1>
+    <h1> WELCOME </h1>
 </body>
 </html>
