Added SRI hashes for google font

--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../static/style.css">
+        <!-- May only work on Chrome since googleapis.com shares different content dependent on browser -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap"
+              integrity="sha256-tPhDNK4st9wA8hFE3S4Ajb9MnR6vjQz6fL6UCBCqtPo=" crossorigin="anonymous" type="text/css">
         <title>Register Account</title>
     </head>
     <body>
